// {C} Copyright 2018 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

// Audit logs related APIs
package audit;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "audit.proto";

// fileGrpcDest is the gRPC destination for this service
option (venice.fileGrpcDest) = "pen-spyglass";
option (venice.fileCategory) = "audit";

// fileApiServerBacked should be set to false to indicate that the set of services defined in this
// file are not backed by the API server.
option (venice.fileApiServerBacked) = false;

// Audit Log service API
service AuditV1 {
    option (venice.apiVersion) = "v1";

    // Fetches an audit event given its uuid
    rpc GetEvent (AuditEventRequest) returns (AuditEvent) {
        option (google.api.http) = {
        get: "/events/{UUID}"
      };
    }
}